# research_workbench

./: .env.example  .gitignore  .reviewed_commits  AGENT-6_ARCHITECTURE_CLEANUP_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_VALIDATION_REPORT.md  BACKLOG.md  CLAUDE.md  CLAUDE_API_HACK.md  CLUADE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TEST_REPORT.md  DONE.md  FILE_ATTACHMENT_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  REVIEW_CHECKLIST.md  SECURITY_AUDIT_REPORT.md  SECURITY_CRITICAL_FIXES_COMPLETED.md  SECURITY_FIXES_REPORT.md  TEST_ORCHESTRATOR_DEPLOYMENT_REPORT.md  architecture_review.md  backend_review_notes.md  cloudflare-config-update.yml  cloudflare-tunnel-config.md  cookies.txt  docker-nginx-workbench.conf  nginx-workbench.conf  review_notes.md  security_review_notes.md  setup-nginx-ssl.sh  team_chat.md  test_cookies.txt  test_orchestrator_demo.rs  workbench-backend.service  workbench-fixed.nginx  workbench-frontend.service  workbench-port443.nginx  workbench-simple.nginx
.claude/: config.json
archive/: .monitor_state.json
backend/: .env.example  BACKLOG.md  Cargo.toml  team_chat.md
backend/db/: schema.sql
backend/migrations/: 20250914140000_add_provider_support.sql  20250914180038_initial_schema.sql  20250914200000_add_embedding_constraints.sql  20250916000000_add_user_sessions.sql  20250917000000_add_refresh_tokens.sql  20250917200000_add_account_lockout.sql
backend/src/: app_state.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  main_simple.rs  models.rs  openai.rs  seed.rs  test_auth_service_jwt.rs  test_jwt_security.rs  test_utils.rs
backend/src/handlers/: analytics.rs  auth.rs  chat.rs  chat_persistent.rs  chat_stream.rs  conversation.rs  file.rs  health.rs  message.rs  mod.rs  models.rs  search.rs
backend/src/llm/: anthropic.rs  claude_code.rs  mod.rs  openai.rs
backend/src/middleware/: auth.rs  csrf.rs  metrics.rs  mod.rs  rate_limit.rs  session_auth.rs
backend/src/repositories/: api_usage.rs  attachment.rs  conversation.rs  embedding.rs  message.rs  mod.rs  refresh_token.rs  user.rs
backend/src/services/: auth.rs  chat.rs  conversation.rs  embedding.rs  file.rs.disabled  mod.rs  password.rs  redis_session_store.rs  session.rs
backend/src/tests/: auth_complete_tests.rs  auth_integration_tests.rs  auth_routing_tests.rs  branching_tests.rs  integration_search_tests.rs  jwt_security_integration_tests.rs  jwt_test_utils.rs  mod.rs  rate_limit_tests.rs  search_tests.rs  session_tests.rs
backend/src/tests.disabled/: mod.rs  streaming_tests.rs
backend/tests/: account_lockout_tests.rs  auth_endpoint_tests.rs  auth_integration_tests.rs  auth_middleware_tests.rs  auth_registration_tests.rs  auth_security_enhancements_tests.rs  auth_session_integration_tests.rs  auth_tests.rs  backend_comprehensive_tests.rs  chat_stream_integration_tests.rs  chat_streaming_tests.rs  claude_code_unit_tests.rs  concurrent_session_tests.rs  conversation_endpoint_tests.rs  csrf_integration_test.rs  csrf_protection_tests.rs  database_tests.rs  error_handling_tests.rs  integration_tests.rs  llm_basic_tests.rs  llm_integration_security_tests.rs  llm_integration_tests.rs  llm_unit_tests.rs  openai_integration_test.rs  owasp_refresh_token_compliance.rs  performance_benchmarks.rs  redis_fallback_tests.rs  refresh_token_security_tests.rs  security_fixes_tests.rs  session_management_security_tests.rs  session_security_tests.rs  simple_auth_registration_tests.rs  test_env.rs  test_user_seeding_tests.rs  unit_tests.rs
blueprint/: CLAUDE.md
config/: nginx-workbench.conf  nginx.conf  workbench-backend.service  workbench-frontend.service  workbench-nginx.service  workbench.nginx
db/: init.sql  performance_indexes.sql  (+2 more)
(+232 files in other folders)
