[package]
name = "workbench-server"
version = "0.1.0"
edition = "2021"
authors = ["Workbench Team"]
description = "LLM Chat Application Backend"

[[bin]]
name = "workbench-server"
path = "src/main.rs"

[lib]
name = "workbench_server"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# LLM integrations
async-openai = "0.20"
anthropic = "0.0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# UUID support
uuid = { version = "1.0", features = ["serde", "v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Static variables
lazy_static = "1.4"
once_cell = "1.19"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Password hashing
argon2 = { version = "0.5", features = ["std"] }

# Async trait support
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL encoding
urlencoding = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for OpenAI
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async streams
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Server-Sent Events
axum-streams = "0.17"

# Configuration
config = "0.14"

# JWT and Authentication
jsonwebtoken = "9.2"
tower-sessions = "0.12"
tower-sessions-redis-store = "0.12"
redis = { version = "0.25", features = ["tokio-comp"] }

# Random number generation (for JWT secrets)
rand = "0.8"

# Time handling for sessions
time = "0.3"

# Rate limiting
tower_governor = "0.4"

# File upload support
axum_typed_multipart = "0.11"
tempfile = "3.8"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"
bytes = "1.5"

[dev-dependencies]
tokio-test = "0.4"
